--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -59,7 +59,7 @@ The icons in this table indicate:
 | {salt}
 
 | Product migration
-| {cross}
+| {salt}
 
 | Basic Virtual Guest Management {star}
 | {question}
