Fix Troubleshooting Corrupt Repositories
The directory name should be just label name.

--- a/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
@@ -25,10 +25,10 @@ You can fix this by removing the files and regenerating it.
 With an new repository data file, updates should operate as expected.
 
 .Procedure: Resolving Corrupt Repository Data
-. Remove all files from [path]``/var/cache/rhn/repodata/<channel-label>-updates-x86_64``.
+. Remove all files from [path]``/var/cache/rhn/repodata/<channel-label>``.
     If you do not know the channel label, you can find it in the {productname} {webui}, by navigating to menu:Software[Channels > Channel Label].
 . Regenerate the file from the command line:
 +
 ----
-spacecmd softwarechannel_regenerateyumcache <channel-label>-updates-x86_64
+spacecmd softwarechannel_regenerateyumcache <channel-label>
 ----
