Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -9,7 +9,8 @@ These PTFs (Program Temporary Fixes) are now available as repositories, which ca
 
 PTF packages are installed via a proxy package and are named `ptf-xxxxxx`, where xxxxxx is a number and part of the name of the package, not its version.
 
-They will depend on the correct version of the package that is known to include the correction in the software. This type of package:
+They will depend on the correct version of the package that is known to include the correction in the software. 
+This type of package:
 
 * cannot be installed accidentally (i.e. zypper update will never suggest installing them),
 * cannot be removed accidentally (i.e. a newer package version will not replace the PTF one, unless the user makes it explicitly on the zypper command line),
