--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -36,7 +36,7 @@ Other versions or Operating Systems do not have this feature yet and the pages a
   E.g. `a123456-sles-15.3-ptfs-x86_64`.
 . Enable the PTF channel with [command]``mgr-sync add channel <label>``.
 
-Now this channel is available and can be added to every system which is using the same base channel.
+This channel is now available and can be added to every system which is using the same base channel.
 
 PTF packages need to be installed explicitly, since they are not automatically picked up when updating a system.
 The SUSE Customer Support will provide the PTF number to fix a specific problem. With the number the proxy package can be identified in the PTF list.
