--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -39,7 +39,8 @@ Other versions or Operating Systems do not have this feature yet and the pages a
 This channel is now available and can be added to every system which is using the same base channel.
 
 PTF packages need to be installed explicitly, since they are not automatically picked up when updating a system.
-The SUSE Customer Support will provide the PTF number to fix a specific problem. With the number the proxy package can be identified in the PTF list.
+The SUSE Customer Support will provide the PTF number to fix a specific problem. 
+The proxy package can be identified in the PTF list with the number.
 In {productname} {webui} every system with PTFs available for installation has a page which lists them.
 
 .Procedure: Enable and Synchronize PTF repositories via the {productname} {webui}
