--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -41,7 +41,7 @@ This channel is now available and can be added to every system which is using th
 PTF packages need to be installed explicitly, since they are not automatically picked up when updating a system.
 The SUSE Customer Support will provide the PTF number to fix a specific problem. 
 The proxy package can be identified in the PTF list with the number.
-In {productname} {webui} every system with PTFs available for installation has a page which lists them.
+Every system with PTFs available for installation has a page in {productname} {webui} which lists them.
 
 .Procedure: Enable and Synchronize PTF repositories via the {productname} {webui}
 
