--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -50,7 +50,7 @@ Every system with PTFs available for installation has a page in {productname} {w
 . You should see a popup listing mandatory and optional channels for the product.
 . In the optional channels list look for channels starting with your SCC account name and `ptfs` in its name.
   E.g. [literal]``a123456-sles-15.3-ptfs-x86_64``.
-. Select the channel using the checkbox next to its name and click btn:[Confirm] to schedule the sync.
+. Select the channel using the checkbox next to its name and click btn:[Confirm] to schedule the synchronization.
 
 Note that the product has to be installed to be able to add optional channels to it.
 
