--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -59,7 +59,7 @@ Note that the product has to be installed to be able to add optional channels to
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client where you want to install a PTF.
 . Navigate to the menu:Systems[Software > Packages > Software Channels] and select the [systemitem]``PTF channel``.
 . Click btn:[Next], and [guimenu]``Confirm Software Channel Change`` with btn:[Confirm].
-. To check if the channel assignment is finished, navigate to menu:Systems[Events > History] to see the results.
+. Navigate to menu:Systems[Events > History] to see the results to check if the channel assignment is finished.
 . Navigate to the menu:Systems[Software > PTFs > Install] sub tab.
 . Select the ptf package you want to install.
 . Click btn:[Install PTF], and [guimenu]``Confirm Program Temporary Fixes (PTFs) Installation`` with btn:[Confirm].
