--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -61,7 +61,7 @@ Note that the product has to be installed to be able to add optional channels to
 . Click btn:[Next], and [guimenu]``Confirm Software Channel Change`` with btn:[Confirm].
 . Navigate to menu:Systems[Events > History] to see the results to check if the channel assignment is finished.
 . Navigate to the menu:Systems[Software > PTFs > Install] sub tab.
-. Select the ptf package you want to install.
+. Select the PTF package you want to install.
 . Click btn:[Install PTF], and [guimenu]``Confirm Program Temporary Fixes (PTFs) Installation`` with btn:[Confirm].
 . To see PTF installation results, navigate to menu:Systems[Events > History].
 
