--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -63,7 +63,7 @@ Note that the product has to be installed to be able to add optional channels to
 . Navigate to the menu:Systems[Software > PTFs > Install] sub tab.
 . Select the PTF package you want to install.
 . Click btn:[Install PTF], and [guimenu]``Confirm Program Temporary Fixes (PTFs) Installation`` with btn:[Confirm].
-. To see PTF installation results, navigate to menu:Systems[Events > History].
+. Navigate to menu:Systems[Events > History] to see PTF installation results.
 
 
 In case a PTF should be installed using the API, the normal [systemitem]``system.schedulePackageInstall`` API can be used with the proxy package name.
