--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -71,7 +71,7 @@ In case a PTF should be installed using the API, the normal [systemitem]``system
 == After PTF installation
 
 Once a PTF is confirmed to address the reported issue, the updated package will be tracked for inclusion
-into a future maintenance update before being widely distributed as an regular maintenance update in the update repositories.
+into a future maintenance update before being widely distributed as a regular maintenance update in the update repositories.
 
 When this regular update with the fix is released, an updated version of the PTF will also be released into
 the account-specific PTF repository. The updated PTF will remove the strict dependencies and allow updates to be installed again.
