--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -74,7 +74,8 @@ Once a PTF is confirmed to address the reported issue, the updated package will 
 into a future maintenance update before being widely distributed as a regular maintenance update in the update repositories.
 
 When this regular update with the fix is released, an updated version of the PTF will also be released into
-the account-specific PTF repository. The updated PTF will remove the strict dependencies and allow updates to be installed again.
+the account-specific PTF repository. 
+The updated PTF will remove the strict dependencies and allow updates to be installed again.
 
 The replacement of the PTF with the maintenance update which includes the fix happens automatically via
 a standard package update or patch installation.
