--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -77,8 +77,7 @@ When this regular update with the fix is released, an updated version of the PTF
 the account-specific PTF repository. 
 The updated PTF will remove the strict dependencies and allow updates to be installed again.
 
-The replacement of the PTF with the maintenance update which includes the fix happens automatically via
-a standard package update or patch installation.
+The replacement of the PTF with the maintenance update which includes the fix happens automatically via a standard package update or patch installation.
 
 
 == Removing the patched version of a package
