--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -82,8 +82,8 @@ The replacement of the PTF with the maintenance update which includes the fix ha
 
 == Removing the patched version of a package
 
-In cases where a PTF needs to be uninstalled and the non-patched version of the packages need to be installed on the system,
-a simple package remove cannot be used. The ptf package is not selectable in the standard package list page.
+In cases where a PTF needs to be uninstalled and the non-patched version of the packages need to be installed on the system, a simple package remove cannot be used. 
+The PTF package is not selectable in the standard package list page.
 
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to remove a PTF from.
 . Navigate to the menu:Systems[Software > PTFs > List/Remove] sub tab.
