--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -87,7 +87,7 @@ The PTF package is not selectable in the standard package list page.
 
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to remove a PTF from.
 . Navigate to the menu:Systems[Software > PTFs > List/Remove] sub tab.
-. Select the ptf package you want to remove.
+. Select the PTF package you want to remove.
 . Click btn:[Remove PTFs], and on the [guimenu]``Confirm Program Temporary Fixes (PTFs) Removal`` page click btn:[Confirm].
 . To see the results, navigate to menu:Systems[Events > History].
 
