--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -104,7 +104,7 @@ In case the PTF should be removed using the API, the normal [systemitem]``system
 
 == Removing the patched version of a package on the client
 
-In case a PTF should be removed directly on the client using the console, it is required to use a special command ``zypper removeptf ...``.
+In case a PTF should be removed directly on the client using the console, it is required to use a special command [literal]``zypper removeptf``.
 All other ways result either in an error or can lead to unwanted behavior like removing important packages from the system, and making the system unusable.
 
 For the command line usage see also: https://www.suse.com/de-de/support/kb/doc/?id=000020596
