--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -96,7 +96,7 @@ The PTF package is not selectable in the standard package list page.
 ====
 Removing PTFs requires a special version of [literal]``libzypp`` and [literal]``zypper`` to be installed on the client system.
 Check [command]``zypper --help`` whether [command]``removeptf`` is supported.
-The ``List/Remove`` tab is only visible if this condition is met.
+The [literal]``List/Remove`` tab is only visible if this condition is met.
 ====
 
 In case the PTF should be removed using the API, the normal [systemitem]``system.schedulePackageRemove`` api can be used with the proxy package name.
