--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -95,7 +95,7 @@ The PTF package is not selectable in the standard package list page.
 [NOTE]
 ====
 Removing PTFs requires a special version of [literal]``libzypp`` and [literal]``zypper`` to be installed on the client system.
-Check [command]``zypper --help`` whether [command]``removeptf`` is supported.
+Check [command]``zypper --help`` to confirm whether [command]``removeptf`` is supported.
 The [literal]``List/Remove`` tab is only visible if this condition is met.
 ====
 
