Minor leftover tidy-up.

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -133,7 +133,7 @@ Azure::
 +
 . Upload the converted certifcate to /<example>/entitlement
 +
-Google Cloud Platform:
+* Google Cloud Platform:
 +
 ----
 cp /etc/pki/rhui/ca.crt /<example>/entitlement
