Minor formatting fixes.

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -75,14 +75,14 @@ The key has a file extension of [path]``.key``.
 .Procedure: Copying Certificates to the Server
 . Copy your entitlement certificate and key from the client system, to your workstation:
 +
-Amazon EC2:
+Amazon EC2::
 +
 ----
 cp /etc/pki/rhui/product/content-<version>.crt /<example>/entitlement/
 cp /etc/pki/rhui/content-<version>.key /<example>/entitlement/
 ----
 +
-Azure:
+Azure::
 +
 * Check the certificate chain using the command:
 +
@@ -111,7 +111,7 @@ Convert it to [literal]``.crt`` with the command:
 openssl x509 -inform DER -in <example.cer> -out <example.crt>
 ----
 +
-Google Cloud Platform:
+Google Cloud Platform::
 +
 ----
 cp /etc/pki/rhui/product/content.crt /<example>/entitlement/
@@ -120,17 +120,17 @@ cp /etc/pki/rhui/key.pem /<example>/entitlement/
 +
 . Copy the {redhat} CA Certificate file from the client system, to the same location as the entitlement certificate and key:
 +
-Amazon EC2:
+Amazon EC2::
 +
 ----
 cp /etc/pki/rhui/cdn.redhat.com-chain.crt /<example>/entitlement
 ----
 +
-Azure:
+Azure::
 +
 * Upload the converted certifcate to /<example>/entitlement
 +
-Google Cloud Platform:
+Google Cloud Platform::
 +
 ----
 cp /etc/pki/rhui/ca.crt /<example>/entitlement
