--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -131,9 +131,9 @@ cp /etc/pki/rhui/cdn.redhat.com-chain.crt /<example>/entitlement
 +
 Azure::
 +
-. Upload the converted certifcate to /<example>/entitlement
+* Upload the converted certifcate to /<example>/entitlement
 +
-* Google Cloud Platform:
+Google Cloud Platform::
 +
 ----
 cp /etc/pki/rhui/ca.crt /<example>/entitlement
