Revert "fix calculation of DB max-connections and allign it with the supportconfig checking tool"
This reverts commit 69af9c4ab2a03676d56c414766c6cf1b2a18ec67.

--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -484,7 +484,7 @@ This section contains information about the available parameters.
                          However, each connection consumes resources, in particular xref:work-mem[`work_mem`] megabytes per sort operation per connection.
 | Tune when            | xref:hibernate-c3p0-max-size[`hibernate.c3p0.max_size`] changes significantly, as that parameter determines the maximum number of connections available to Tomcat and Taskomatic
 | Value default        | 400
-| Value recommendation | 2 * xref:hibernate-c3p0-max-size[hibernate.c3p0.max_size] + apache xref:server-limit[`MaxClients`] + 70, if less than 1000
+| Value recommendation | 2 * xref:hibernate-c3p0-max-size[hibernate.c3p0.max_size] + 50, if less than 1000
 | Location             | [path]``/var/lib/pgsql/data/postgresql.conf``
 | Example              | `max_connections = 250`
 | After changing       | Check xref:memory-usage[memory usage].
