Bug fix. Correct instruction for cobbler buildiso command.

--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -32,11 +32,17 @@ For information about creating a distribution, see xref:client-configuration:aut
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
 The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
-Specifying the distribution with [option]``--distro`` is mandatory.
-For example:
+Specifying the distribution with [option]``--distro`` is mandatory when running [command]``buildiso`` command.
 
 ----
-cobbler buildiso --iso=/path/to/boot.iso --distro=SLE_15-sp1
+cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
+----
+
+To list the names of distros and profiles stored by Cobbler, run the commands:
+
+----
+# cobbler distro list
+# cobbler profile list
 ----
 
 The boot ISO includes all profiles and systems by default.
@@ -45,7 +51,7 @@ For example:
 
 ----
 cobbler buildiso --systems="system1 system2 system3" \
-  --profiles="profile1 profile2 profile3 --distro=SLE_15-sp1"
+  --profiles="<your-profile1> <your-profile2> <your-profile3> --distro=<your-distro-label>"
 ----
 
 [NOTE]
