Do not mention custom info storage details

--- a/modules/client-configuration/pages/custom-info.adoc
+++ b/modules/client-configuration/pages/custom-info.adoc
@@ -18,8 +18,7 @@ Before you begin, you need to create a key that allows you to store custom infor
 . In the [guimenu]``Description`` field, provide any additional information required.
 . Repeat for each key you require.
 
-For traditional clients, this information is stored in the {productname} database.
-For Salt clients, this information is stored in a Salt pillar.
+For Salt clients, this information is available via Salt pillar.
 You can retrieve this information from a Salt client with a command such as:
 
 ----
