Adjust the note to refelect the reality

--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -28,7 +28,6 @@ You can also use a VHM to manage clusters created with {kube}.
 ifeval::[{suma-content} == true]
 [NOTE]
 ====
-You must have a virtualization add-on subscription for each virtualized client you register.
-Visit the {scc} to manage your {productname} subscriptions.
+You must have a virtualization add-on subscription for each host with the Virtualization Server entitlement in SUSE Manager.
 ====
 endif::[]
