--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -2,29 +2,29 @@
 = Product Migration
 
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
-For example, you can migrate {sle}{nbsp}15{nbsp}SP1 to {sle}{nbsp}15{nbsp}SP2.
+For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 
-You can also migrate openSUSE Leap to a later minor version or to the corresponding SLE SP level, for example:
+You can also migrate openSUSE Leap to a later minor version or to the corresponding {sles} SP level, for example:
 
 * openSUSE Leap 15.1 to 15.2, or
-* openSUSE Leap 15.1 to {sle} 15 SP1, or
-* openSUSE Leap 15.4 to {sle} 15 SP4
+* openSUSE Leap 15.1 to {sles} 15 SP1, or
+* openSUSE Leap 15.4 to {sles} 15 SP4
 
 [WARNING]
 ====
 During migration, {productname} automatically accepts any required licenses (EULAs) before installation.
 ====
 
-In {sle}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
-For example, you can upgrade from {sle}{nbsp}15 to SP2, without installing SP1.
-For supported {sle} upgrade paths, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported.
+In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
+For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
+For supported {sles} upgrade paths, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported.
 
 
 
 [IMPORTANT]
 ====
 Product migration is for upgrading within the same major version.
-You cannot use product migration to migrate from {sle}{nbsp}12 to {sle}{nbsp}15.
+You cannot use product migration to migrate from {sles}{nbsp}12 to {sles}{nbsp}15.
 For more information about major upgrades, see xref:client-configuration:client-upgrades-major.adoc[].
 ====
 
@@ -58,7 +58,7 @@ Before starting the product migration:
 +
 [IMPORTANT]
 ====
-To migrate openSUSE Leap to {sle}, you must check the [guimenu]``Allow Vendor Change`` option.
+To migrate openSUSE Leap to {sles}, you must check the [guimenu]``Allow Vendor Change`` option.
 ====
 . Click btn:[Schedule Migration] when your channels have been configured properly.
 
