--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -38,7 +38,7 @@ Specifying the distribution with [option]``--distro`` is mandatory when running 
 cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
-To list the names of distros and profiles stored by Cobbler, run the commands:
+To list the names of distributions and profiles stored by Cobbler, run the commands:
 
 ----
 # cobbler distro list
