--- a/modules/administration/pages/troubleshooting/tshoot-notifications.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-notifications.adoc
@@ -31,7 +31,9 @@ java.notifications_lifetime = 30
 To enable or disable a notification type, add or edit a line as follows in [path]``/etc/rhn/rhn.conf``:
 
 ----
-java.notifications_type_disabled = OnboardingFailed,ChannelSyncFailed,ChannelSyncFinished
+java.notifications_type_disabled = OnboardingFailed,ChannelSyncFailed,\
+  ChannelSyncFinished,CreateBootstrapRepoFailed,StateApplyFailed,\
+  PaygAuthenticationUpdateFailed,EndOfLifePeriod,SubscriptionWarning
 ----
 
 For default settings and configuration options, see the [path]``usr/share/rhn/config-defaults/rhn_java.conf`` template file.
