Backported old change, admonition converted to bulletd text.

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -40,16 +40,13 @@ Ensure you have a working system backup available, in case of an emergency.
 
 == Perform a Migration
 
-Before starting the product migration, ensure there are no pending updates or patches.
-Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
-If your client system is not uptodate, product migration may fail.
+Before starting the product migration:
 
-
-[NOTE]
-====
-Before starting a migration, make sure all the channels of the target product are fully synchronized.
-To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
-====
+* Ensure there are no pending updates or patches.
+  Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
+  If your client system is not up to date, product migration may fail.
+* Make sure all the channels of the target product are fully synchronized.
+  To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
 
 
 .Procedure: Performing a Migration
