--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -38,6 +38,9 @@ Specifying the distribution with [option]``--distro`` is mandatory when running 
 cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
+
+NOTE: Keep in mind that you must use distro and profile labels as listed by Cobbler, and not simply as shown in the UI.
+
 To list the names of distributions and profiles stored by Cobbler, run the commands:
 
 ----
