--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -31,11 +31,23 @@ For information about creating a distribution, see xref:client-configuration:aut
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
 The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
-Specifying the distribution with [option]``--distro`` is mandatory.
-For example:
+
+Specifying the distribution with [option]``--distro`` is mandatory when running [command]``buildiso`` command.
 
 ----
-cobbler buildiso --iso=/path/to/boot.iso --distro=SLE_15-sp1
+cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
+----
+
+[IMPORTANT]
+====
+You must use distro and profile labels as listed by Cobbler, and not simply as shown in the UI.
+====
+
+To list the names of distributions and profiles stored by Cobbler, run the commands:
+
+----
+# cobbler distro list
+# cobbler profile list
 ----
 
 The boot ISO includes all profiles and systems by default.
@@ -44,7 +56,7 @@ For example:
 
 ----
 cobbler buildiso --systems="system1 system2 system3" \
-  --profiles="profile1 profile2 profile3 --distro=SLE_15-sp1"
+  --profiles="<your-profile1-label> <your-profile2-label> <your-profile3-label> --distro=<your-distro-label>"
 ----
 
 [NOTE]
