--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -28,6 +28,6 @@ You can also use a VHM to manage clusters created with {kube}.
 ifeval::[{suma-content} == true]
 [NOTE]
 ====
-You must have a virtualization add-on subscription for each host with the Virtualization Server entitlement in SUSE Manager.
+You must have a virtualization add-on subscription for each host with the Virtualization Server entitlement in {productname}.
 ====
 endif::[]
