--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -10,6 +10,7 @@ You can also migrate openSUSE Leap to a later minor version or to the correspond
 * openSUSE Leap 15.1 to {sle} 15 SP1, or
 * openSUSE Leap 15.4 to {sle} 15 SP4
 
+
 [WARNING]
 ====
 During migration, {productname} automatically accepts any required licenses (EULAs) before installation.
@@ -18,7 +19,6 @@ During migration, {productname} automatically accepts any required licenses (EUL
 In {sle}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
 For example, you can upgrade from {sle}{nbsp}15 to SP2, without installing SP1.
 For supported {sle} upgrade paths, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported.
-
 
 
 [IMPORTANT]
@@ -40,18 +40,13 @@ Ensure you have a working system backup available, in case of an emergency.
 
 == Perform a Migration
 
-Before starting the product migration, ensure there are no pending updates or patches.
-Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
-If your client system is not uptodate, product migration may fail.
+Before starting the product migration:
 
-
-
-[NOTE]
-====
-Before starting a migration, make sure all the channels of the target product are fully synchronized.
-To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
-====
-
+* Ensure there are no pending updates or patches.
+  Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
+  If your client system is not up to date, product migration may fail.
+* Make sure all the channels of the target product are fully synchronized.
+  To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
 
 
 .Procedure: Performing a Migration
@@ -73,7 +68,6 @@ To migrate openSUSE Leap to {sle}, you must check the [guimenu]``Allow Vendor Ch
 == Product Mass Migration
 
 If you want to migrate a large number of clients to the next SP version, you can use {productname} API calls.
-
 
 
 [WARNING]
@@ -126,7 +120,6 @@ endfor
 
 
 
-
 === Product Mass Migration Example: SLES 15 SP2 to SLES 15 SP3
 
 ////
@@ -139,7 +132,6 @@ For this example, a group will be created temporarily to facilitate the mass mig
 
 . In the {productname} {webui}, navigate to menu:Systems[System Groups], and click btn:[Create Group].
 . Name the group [literal]``mpm-target-sles15sp3``.
-
 
 
 Only systems subscribed to the same base channel should be added to the created group.
@@ -163,13 +155,13 @@ Note or warning about taking normal precautions (backups, make sure fully patche
 The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` abd [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
 If there are 100 systems in the group, you will see 100 actions scheduled.
 It is important that all systems in the group support the same "migration target".
-+
+
 You will get the targets for all the systems in the group, when you run:
-+
+
 ----
 spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
 ----
-+
+
 Only select a target, which is reported for *all* systems.
 This command output a string of"IDs".
 The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
