Initial fix for the procedure, to be as mgr 42 and 43.

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -157,36 +157,33 @@ In the example, only systems subscribed to [literal]``SLE-Product-SLES15-SP2-Poo
 [NOTE]
 ====
 Any systems that you are not intending to upgrade at this time, should be removed from the group.
-
-For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
 ====
+
 
 .Procedure: Adding Systems to the Group
 
-//[IMPORTANT]
-//====
-//The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` and [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
-//If there are 100 systems in the group, you will see 100 actions scheduled.
-//It is important that all systems in the group support the same "migration target."
-//====
+. For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
 
-. You will get the targets for all the systems in the group, when you run:
-+
-----
-spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
-----
-+
-. Only select a target, which is reported for *all* systems.
-  This command output a string of "IDs."
-  The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
-+
+////
+Note or warning about taking normal precautions (backups, make sure fully patched, etc)
+////
+
 [IMPORTANT]
 ====
 The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` and [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
 If there are 100 systems in the group, you will see 100 actions scheduled.
 It is important that all systems in the group support the same "migration target."
-====
 
+You will get the targets for all the systems in the group, when you run:
+
+----
+spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
+----
+
+Only select a target, which is reported for *all* systems.
+This command output a string of "IDs."
+The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
+====
 
 
 
