--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -4,52 +4,44 @@
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 
+Product migration is for upgrading within the same major version.
+You cannot use product migration to migrate from {sles}{nbsp}12 to {sles}{nbsp}15.
+For more information about major upgrades, see xref:client-configuration:client-upgrades-major.adoc[].
+
 You can also migrate openSUSE Leap to a later minor version or to the corresponding {sles} SP level, for example:
 
 * openSUSE Leap 15.1 to 15.2, or
 * openSUSE Leap 15.1 to {sles} 15 SP1, or
 * openSUSE Leap 15.5 to {sles} 15 SP5
 
-[WARNING]
+
+In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
+For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
+
+For supported {sles} upgrade paths, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported.
+
+[NOTE]
 ====
 During migration, {productname} automatically accepts any required licenses (EULAs) before installation.
 ====
 
-In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
-For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
-For supported {sles} upgrade paths, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported.
 
 
-
-[IMPORTANT]
-====
-Product migration is for upgrading within the same major version.
-You cannot use product migration to migrate from {sles}{nbsp}12 to {sles}{nbsp}15.
-For more information about major upgrades, see xref:client-configuration:client-upgrades-major.adoc[].
-====
-
-
-[WARNING]
-====
-Product migration does not have a rollback feature.
-When the migration procedure has begun, rolling back is not possible.
-Ensure you have a working system backup available, in case of an emergency.
-====
-
-
-
-== Perform a Migration
+== Single System Migration
 
 Before starting the product migration:
 
 * Ensure there are no pending updates or patches.
   Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
-  If your client system is not uptodate, product migration may fail.
+  If your client system is not up to date, product migration may fail.
 * Make sure all the channels of the target product are fully synchronized.
   To check the synchronization status in the {webui}, navigate to the menu:Admin[Setup Wizard > Products] page.
+* Ensure you have a working system backup available, in case of an emergency.
+  Product migration does not have a rollback feature.
+  When the migration procedure has begun, rolling back is not possible.
 
 
-.Procedure: Performing a Migration
+.Procedure: Performing a Single System Migration
 . From the menu:Systems[Overview] page, select a client.
 . From the system details page of the client, navigate to the menu:Software[Product Migration] tab.
 . Select the target migration path and click btn:[Select Channels].
@@ -69,27 +61,27 @@ To migrate openSUSE Leap to {sles}, you must check the [guimenu]``Allow Vendor C
 
 If you want to migrate a large number of clients to the next SP version, you can use {productname} API calls.
 
-
-
-[WARNING]
-====
-The product mass migration operation is dangerous.
-Be careful not to upgrade systems unintentionally.
-The process should be tested thoroughly.
-At least, do a dry-run first.
-====
-
 The [command]``spacecmd`` commandline tool provides a [systemitem]``system_scheduleproductmigration`` sub command, which can be used to schedule a migration for a large number of clients to the next minor version.
 
-To see syntax usage and options for [systemitem]``system_scheduleproductmigration``, run:
-
-----
-spacecmd system_scheduleproductmigration help
-----
+// This will be mentioned below, in more details.
+//To see syntax usage and options for [systemitem]``system_scheduleproductmigration``, run:
+//
+//----
+//spacecmd system_scheduleproductmigration help
+//----
 
 
 
 === Perform a Product Mass Migration
+
+[WARNING]
+====
+The product mass migration operation is dangerous and the process should be tested thoroughly.
+At least, do a dry-run first.
+
+Be careful not to upgrade systems unintentionally.
+====
+
 
 .Procedure: Performing a Product Mass Migration
 . List available migration targets, and take note of the system IDs you want to migrate:
@@ -101,9 +93,9 @@ spacecmd api -- system.listMigrationTargets -A 1000010001
 +
 * If the system ID has an available target, call [systemitem]``system.scheduleProductMigration``.
 * If the desired target is not available, skip the system.
-
-Adapt this template for your environment:
-
++
+. Adapt this template for your environment:
++
 ----
 target = '[....]'
 basechannel = 'channel-label'
@@ -121,54 +113,44 @@ endfor
 
 
 
-
 === Product Mass Migration Example: SLES 15 SP2 to SLES 15 SP3
-
-////
-Adjust the following draft text
-////
 
 For this example, a group will be created temporarily to facilitate the mass migration.
 
 .Procedure: Creating a Mass Product Migration Group
-
 . In the {productname} {webui}, navigate to menu:Systems[System Groups], and click btn:[Create Group].
 . Name the group [literal]``mpm-target-sles15sp3``.
++
+* Only systems subscribed to the same base channel should be added to the created group.
+  In the example, only systems subscribed to [literal]``SLE-Product-SLES15-SP2-Pool for x86_64`` should be added to the group.
+* For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
 
-
-
-Only systems subscribed to the same base channel should be added to the created group.
-In the example, only systems subscribed to [literal]``SLE-Product-SLES15-SP2-Pool for x86_64`` were added to the group.
-
-[NOTE]
-====
-Any systems that you are not intending to upgrade at this time, should be removed from the group.
-====
-
-
-.Procedure: Adding Systems to the Group
-
-. For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
+//[NOTE]
+//====
+//Any systems that you are not intending to upgrade at this time, should be removed from the group.
+//====
 
 ////
 Note or warning about taking normal precautions (backups, make sure fully patched, etc)
 ////
 
+
+.Procedure: Adding Systems to the Group
+. Get the targets for all the systems in the group by running:
++
+----
+spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
+----
++
+. The command output a string of "IDs."
+  * Only select a target, which is reported for *all* systems.
+  * The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
++
 [IMPORTANT]
 ====
 The [command]``spacecmd`` sub-commands [literal]``system_scheduleproductmigration`` and [command]``system_listmigrationtargets`` are looping over all systems that are part of the group.
 If there are 100 systems in the group, you will see 100 actions scheduled.
 It is important that all systems in the group support the same "migration target."
-
-You will get the targets for all the systems in the group, when you run:
-
-----
-spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
-----
-
-Only select a target, which is reported for *all* systems.
-This command output a string of "IDs."
-The string is the identifier for the [literal]``MIGRATIONTARGET`` of the other command.
 ====
 
 
@@ -189,11 +171,16 @@ spacecmd -- system_scheduleproductmigration <SYSTEM> <BASE_CHANNEL_LABEL> \
     <MIGRATION_TARGET> [options]
 ----
 
-For more information, see [command]``spacecmd -- system_scheduleproductmigration help``.
+To see syntax usage and options for [command]``system_scheduleproductmigration``, run:
+
+----
+spacecmd system_scheduleproductmigration help
+----
 
 
 
-=== Mandatory Syntax
+
+==== Mandatory Syntax
 
 <SYSTEM>::
 For this example we will use the group we created to select all of the systems from that group:
@@ -228,10 +215,10 @@ The [literal]``MIGRATION_TARGET`` parameter must be passed in the following form
 ----
 
 Options::
-+
-. -s START_TIME
-. -d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
-. -c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
+
+* -s START_TIME
+* -d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
+* -c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
 +
 In this case we included the [literal]``-d`` option, which can be removed after a successful dry run.
 
