--- a/modules/client-configuration/pages/autoinst-distributions.adoc
+++ b/modules/client-configuration/pages/autoinst-distributions.adoc
@@ -39,7 +39,7 @@ This is usually a DVD [path]``.iso`` image that contains the Linux kernel, an [p
 # umount /mnt
 ----
 +
-  Take a note of the file path.
+. Take a note of the file path.
   You will need it when you declare the distribution to {productname}.
 
 
